# BraTS

./: .gitignore  PIPELINE_EXPLANATION.md  README.md  REFERENCES.md  TERMS_AND_THEORY.md  doctor.py  explain.md  project_config.json  pyproject.toml  pyrightconfig.json  run.py
00_first_case_visualization/: README.md  visualize_first_case.py
01_data_preparation/: README.md
01_data_preparation/docs/: data_contract.md
01_data_preparation/scripts/: prepare_brats2020_for_project.py
02_preprocess/: README.md
02_preprocess/docs/: preprocess_guide.md
02_preprocess/metadata/: dataset.json  dataset_fingerprint.json  nnUNetPlans.json  splits_final.json
03_training_and_results/: README.md  pyrightconfig.json
03_training_and_results/docs/: code_directory_audit.md  training_guide.md
03_training_and_results/src/brats_project/: cli.py  configuration.py  paths.py  project_layout.py
03_training_and_results/src/brats_project/dataset_conversion/: Dataset137_BraTS21.py  generate_dataset_json.py
03_training_and_results/src/brats_project/ensembling/: ensemble.py
03_training_and_results/src/brats_project/evaluation/: accumulate_cv_results.py  evaluate_predictions.py  find_best_configuration.py
03_training_and_results/src/brats_project/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
03_training_and_results/src/brats_project/imageio/: natural_image_reader_writer.py  nibabel_reader_writer.py  reader_writer_registry.py  simpleitk_reader_writer.py  tif_reader_writer.py
03_training_and_results/src/brats_project/inference/: data_iterators.py  export_prediction.py  predict_from_raw_data.py  sliding_window_prediction.py
03_training_and_results/src/brats_project/postprocessing/: remove_connected_components.py
03_training_and_results/src/brats_project/run/: load_pretrained_weights.py  run_training.py
03_training_and_results/src/brats_project/utilities/: dataset_name_id_conversion.py  default_n_proc_DA.py  file_path_utilities.py  get_network_from_plans.py  helpers.py  overlay_plots.py  utils.py
04_inference_and_evaluation/: README.md  generate_evaluation_report.py
04_inference_and_evaluation/docs/: inference_guide.md
04_inference_and_evaluation/input/: README.md
temp/: study_1.md
temp/legacy_nnunet_test/: README.md
tests/: test_regressions.py  test_smoke.py
tools/: torch_test.py
(+94 files in other folders)
